--- a/dotgrowen/package.json
+++ b/dotgrowen/package.json
@@ -12,8 +12,7 @@
     "next": "10.0.7",
     "react": "17.0.1",
     "react-dom": "17.0.1",
-    "react-firebase-hooks": "^2.2.0",
-    "react-typist": "^2.0.5"
+    "react-firebase-hooks": "^2.2.0"
   },
   "devDependencies": {
     "@types/node": "^14.14.31",
