--- a/dotgrowen/package.json
+++ b/dotgrowen/package.json
@@ -12,7 +12,8 @@
     "next": "10.0.7",
     "react": "17.0.1",
     "react-dom": "17.0.1",
-    "react-firebase-hooks": "^2.2.0"
+    "react-firebase-hooks": "^2.2.0",
+    "react-markdown": "^5.0.3"
   },
   "devDependencies": {
     "@types/node": "^14.14.31",
