--- a/dotgrowen/package.json
+++ b/dotgrowen/package.json
@@ -9,10 +9,13 @@
   },
   "dependencies": {
     "firebase": "^8.2.9",
+    "lodash.debounce": "^4.0.8",
+    "lodash.kebabcase": "^4.1.1",
     "next": "10.0.7",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-firebase-hooks": "^2.2.0",
+    "react-hot-toast": "^1.0.2",
     "react-markdown": "^5.0.3"
   },
   "devDependencies": {
